--- a/requirements.txt
+++ b/requirements.txt
@@ -4,8 +4,9 @@ numpy==1.19.4
 pretty_midi==0.2.9
 pypianoroll==1.0.4
 PyYAML==6.0
-tensorflow==2.9.1
-tensorflow_gpu==2.4.0
 tqdm==4.64.0
 wandb==0.12.18
 dataclasses
+# Uncomment if using local env
+# tensorflow==2.9.1
+# tensorflow_gpu==2.4.0
