--- a/requirements.txt
+++ b/requirements.txt
@@ -8,5 +8,9 @@ tqdm==4.64.0
 wandb==0.12.18
 dataclasses
 # Uncomment if using local env
-# tensorflow==2.9.1
+# tensorflow==2.4.4
 # tensorflow_gpu==2.4.0
+
+# Uncomment for development.
+# jupyter
+# pipreqs
