--- a/config.yaml
+++ b/config.yaml
@@ -1,19 +1,19 @@
 path:
-  # data_dir: js-fakes/midi/*.mid
-  # test_dir: js-fakes/jsf-extended/*.mid
-  data_dir: /home/stu00608/Datasets/adl-piano-midi/midi/**/*.mid
+  data_dir: js-fakes/midi/*.mid
   test_dir: js-fakes/jsf-extended/*.mid
   model_dir: models/
   out_dir: outputs/
 params:
-  batch_size: 4
-  epochs: 200
-  layers: 3
+  bpm: 120
+  batch_size: 16
+  epochs: 500
+  layers: 2
   unit: 512
   dropout: 0.2
   embed_size: 256
-  sequence_length: 256
+  sequence_length: 8
   stateful: True
+  track_size: 4
 output:
   wandb: True
   length: 20
